# player-sdk-svn

player-sdk/trunk/: COPYING  ChangeLog  Makefile.am  PlayerSdk.ini  README  TODO  autogen.sh  configure.in
player-sdk/trunk/DataKits/: Makefile.am
player-sdk/trunk/DataKits/Sqlite/: Makefile.am  SqliteDataKit.cs
player-sdk/trunk/PlayerKits/: Makefile.am
player-sdk/trunk/PlayerKits/Gstreamer/: GstPlayer.cs  GstPlayer.dll.config  GstPlayer.dll.config.in  Makefile.am  player-gst.c
player-sdk/trunk/Plugins/test/: Makefile.am  PluginTest.cs
player-sdk/trunk/doc/: Makefile.am  player-sdk.source
player-sdk/trunk/doc/arch/: Addins-Arch.dia  Architecture.sxw  Configuration.dia  DirectoryOverview.txt  Kits-Arch.dia  NamespaceOverview.txt  Plugin-Arch.dia
player-sdk/trunk/doc/en/Player.Addins/: AddinLoader.xml  AddinLoadingException.xml  AddinUnavailableException.xml  IAddin.xml
player-sdk/trunk/doc/en/Player.Configuration/: Configuration.xml  FileStore.xml
player-sdk/trunk/doc/en/Player.Data/: Album.xml  AlbumMetadata.xml  Cover.xml  IAlbumComparer.xml  ICoverDb.xml  IDataKit.xml  IMusicDb.xml  ISearchable.xml  ISongComparer.xml  SimpleAlbumComparer.xml  SimpleSongComparer.xml  Song.xml  SongMetadata.xml
player-sdk/trunk/doc/en/Player.Kits/: IKit.xml  KitManager.xml
player-sdk/trunk/doc/en/Player.Player/: EOSEventHandler.xml  IPlayer.xml  IPlayerKit.xml  RepetitionType.xml  StateEventHandler.xml  TickEventHandler.xml
player-sdk/trunk/doc/en/Player.Playlist/: ClearedEventHandler.xml  IPlaylist.xml  Playlist.xml  SongAddedEventHandler.xml  SongChangedEventHandler.xml  SongRemovedEventHandler.xml
player-sdk/trunk/doc/en/Player.Plugins/: IPlugin.xml  PluginManager.xml
player-sdk/trunk/doc/en/Player.Services/: SdkServices.xml  ServiceUnavailableException.xml
player-sdk/trunk/examples/: DbTest.cs  KitManagerTest.cs  Makefile.am  PlayerTest.cs  PluginManagerTest.cs
player-sdk/trunk/src/: Makefile.am  makesources.sh  player-sdk.pc.in  sources.list
player-sdk/trunk/src/Addins/: AbstractAddin.cs  AddinLoader.cs  AddinLoadingException.cs  AddinUnavailableException.cs  IAddin.cs
player-sdk/trunk/src/Configuration/: Configuration.cs  FileStore.cs
player-sdk/trunk/src/Configuration/tests/: ConfigurationTest.cs  Makefile
player-sdk/trunk/src/Data/: Album.cs  AlbumMetadata.cs  Cover.cs  DataKit.cs  IAlbumComparer.cs  ICoverDb.cs  IDataKit.cs  IMusicDb.cs  ISearchable.cs  ISongComparer.cs  Song.cs  SongMetadata.cs
player-sdk/trunk/src/Global/: PlayerServices.cs
player-sdk/trunk/src/Kits/: IKit.cs  KitManager.cs
player-sdk/trunk/src/Nini/: AssemblyInfo.cs  README
player-sdk/trunk/src/Nini/Config/: ArgvConfigSource.cs  ConfigBase.cs  ConfigCollection.cs  ConfigSourceBase.cs  DotNetConfigSource.cs  IConfig.cs  IConfigSource.cs  IniConfigSource.cs  RegistryConfigSource.cs  XmlConfigSource.cs
player-sdk/trunk/src/Nini/Ini/: IniDocument.cs  IniReader.cs  IniSection.cs  IniSectionCollection.cs
player-sdk/trunk/src/Nini/Util/: ArgvParser.cs  IOrderedDictionary.cs  OrderedList.cs  OrderedListEnumerator.cs
player-sdk/trunk/src/Player/: IPlayer.cs  IPlayerKit.cs  PlayerKit.cs
player-sdk/trunk/src/Playlist/: IPlaylist.cs  Playlist.cs
player-sdk/trunk/src/Plugins/: IPlugin.cs  PluginInfoAttribute.cs  PluginLoadingException.cs  PluginManager.cs
player-sdk/trunk/src/Services/: SdkServices.cs  ServiceUnavailableException.cs
player-sdk/trunk/src/Services/tests/: Makefile  SdkServicesTest.cs
utils/: prepare-ChangeLog.pl  svnpurge
