AC_INIT(Makefile.am)
AC_CANONICAL_SYSTEM
AM_INIT_AUTOMAKE(player-sdk, 0.1)
AM_MAINTAINER_MODE

dnl Version dependencies

MONO_REQUIRED=1.0
GTKSHARP_REQUIRED=1.0

dnl Pkgconfig

PKG_CHECK_MODULES(MONO,
		  mono >= $MONO_REQUIRED)

PKG_CHECK_MODULES(GTKSHARP,
		  gtk-sharp >= $GTKSHARP_REQUIRED \
		  gnome-sharp >= $GTKSHARP_REQUIRED \
		  glade-sharp >= $GTKSHARP_REQUIRED \
		  gconf-sharp >= $GTKSHARP_REQUIRED)


dnl Check for Mono
AC_PATH_PROG(MCS, mcs)
AC_PATH_PROG(MONO, mono)

MCS_FLAGS=
MONO_FLAGS=
if test $USE_MAINTAINER_MODE = yes; then
	MCS_FLAGS="-g"
	MONO_FLAGS="--debug"
fi
AC_SUBST(MCS_FLAGS)
AC_SUBST(MONO_FLAGS)

AC_OUTPUT([
Makefile
examples/Makefile
doc/Makefile
src/Makefile
src/player-sdk.pc
PlayerKits/Makefile
PlayerKits/Gstreamer/Makefile
DataKits/Makefile
DataKits/Sqlite/Makefile
])
